--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,12 @@
   .padding {
     @apply sm:px-16 px-8 sm:py-24 py-12;
   }
+  .heading{
+    @apply flex flex-col items-center justify-center pb-10 px-10 transition-all hover:scale-110 hover:brightness-110;
+  }
+  .headingText{
+    @apply text-2xl sm:text-4xl lg:text-6xl font-bold;
+  }
 
   /* Text Utilities */
   /* Neon Effects */
